package com.usil.fastfood.model;

public enum ComboType {
    HAMBURGUESA, POLLO, VEGETARIANO
}
